--- a/src/main/resources/gui/main.fxml
+++ b/src/main/resources/gui/main.fxml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
+<?import org.fxmisc.richtext.* ?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="505.0" prefWidth="583.0"
-            xmlns="http://javafx.com/javafx/null"
-            fx:controller="gui.controller.MainController">
+
+<BorderPane prefHeight="505.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close" onAction="#dupa"/>
+                        <MenuItem mnemonicParsing="false" onAction="#dupa" text="Close" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
+                        <MenuItem mnemonicParsing="false" text="About" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
     </top>
-    <bottom>
-        <fx:include source="../gui/command.fxml"/>
-    </bottom>
-    <center>
-        <TextArea disable="true" editable="false" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
-    </center>
+   <center>
+        <fx:include source="console.fxml" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
