--- a/src/main/resources/gui/main.fxml
+++ b/src/main/resources/gui/main.fxml
@@ -12,7 +12,7 @@
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#dupa" text="Close" />
+                        <MenuItem mnemonicParsing="false" text="Close" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
