--- a/src/main/resources/gui/script_list.fxml
+++ b/src/main/resources/gui/script_list.fxml
@@ -3,6 +3,6 @@
 <?import javafx.scene.control.TreeView?>
 <TreeView xmlns:fx="http://javafx.com/fxml/1"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="gui.controller.ScriptListController" editable="true"
-          prefHeight="200.0" prefWidth="200.0" fx:id="scriptView">
+          prefHeight="200.0" prefWidth="200.0" fx:id="scriptView" onMouseClicked="#onScriptViewMouseClick">
 
 </TreeView>
