--- a/src/main/resources/gui/script-editor.fxml
+++ b/src/main/resources/gui/script-editor.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 
+<?import gui.model.script.ScriptEditorPane?>
 <BorderPane fx:controller="gui.controller.ScriptEditorController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
@@ -29,7 +30,7 @@
         </MenuBar>
     </top>
     <center>
-        <TabPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        </TabPane>
+        <ScriptEditorPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        </ScriptEditorPane>
     </center>
 </BorderPane>
