--- a/src/main/resources/gui/script-editor.fxml
+++ b/src/main/resources/gui/script-editor.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import gui.model.script.ScriptEditorPane?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -8,9 +7,9 @@
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="gui.controller.ScriptEditorController">
     <center>
-        <ScriptEditorPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE"
-                          BorderPane.alignment="CENTER">
-        </ScriptEditorPane>
+        <TabPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE"
+                 BorderPane.alignment="CENTER">
+        </TabPane>
     </center>
     <top>
         <VBox prefHeight="41.0" prefWidth="600.0" BorderPane.alignment="CENTER">
