Add variables versioning

--- a/src/main/resources/com/klab/gui/variable-list.fxml
+++ b/src/main/resources/com/klab/gui/variable-list.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40"
             fx:controller="com.klab.gui.controller.VariableController">
     <children>
-        <Accordion fx:id="variablesAccordion" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <panes>
-            </panes>
-        </Accordion>
+        <VBox fx:id="variablesBox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        </VBox>
     </children>
 </AnchorPane>
