--- a/src/main/resources/com/klab/gui/script_list.fxml
+++ b/src/main/resources/com/klab/gui/script_list.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TreeView?>
 <TreeView xmlns:fx="http://javafx.com/fxml/1" fx:id="scriptView" editable="true"
-          onMouseClicked="#onScriptViewMouseClick" prefHeight="200.0" prefWidth="200.0"
+          onMouseClicked="#onScriptViewMouseClick"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.klab.gui.controller.ScriptListController">
     <contextMenu>
         <ContextMenu>
