--- a/src/main/resources/com/klab/gui/script-editor.fxml
+++ b/src/main/resources/com/klab/gui/script-editor.fxml
@@ -12,6 +12,7 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
+                                <MenuItem mnemonicParsing="false" onAction="#newScript" text="New script"/>
                                 <MenuItem mnemonicParsing="false" text="Close"/>
                             </items>
                         </Menu>
