--- a/src/main/resources/com/klab/gui/script_list.fxml
+++ b/src/main/resources/com/klab/gui/script_list.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.control.*?>
 <TreeView xmlns:fx="http://javafx.com/fxml/1" fx:id="scriptView" editable="true"
           onMouseClicked="#onScriptViewMouseClick"
           xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.klab.gui.controller.ScriptListController">
@@ -11,6 +9,8 @@
         <ContextMenu>
             <items>
                 <MenuItem mnemonicParsing="false" text="Run script" onAction="#onRunScriptMenuAction"/>
+                <MenuItem mnemonicParsing="false" text="Delete" onAction="#onDeleteScript"/>
+                <MenuItem mnemonicParsing="false" text="Rename" onAction="#onScriptRename"/>
             </items>
         </ContextMenu>
     </contextMenu>
