Change script editor layout

--- a/src/main/resources/com/klab/gui/script-editor.fxml
+++ b/src/main/resources/com/klab/gui/script-editor.fxml
@@ -47,26 +47,38 @@
             <items>
                 <TabPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 </TabPane>
-                <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                        <Tab closable="false" text="Console output">
-                            <content>
-                                <AnchorPane>
-                                    <fx:include source="script-console.fxml"/>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                        <Tab text="Debug">
-                            <content>
-                                <AnchorPane>
-                                    <fx:include source="variable-list.fxml" AnchorPane.bottomAnchor="0.0"
-                                                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                AnchorPane.topAnchor="0.0"/>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                    </tabs>
-                </TabPane>
+                <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0">
+                    <items>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                            <children>
+                                <TitledPane collapsible="false" prefHeight="200.0" prefWidth="200.0" text="Console"
+                                            AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                            AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <content>
+                                        <AnchorPane>
+                                            <fx:include source="script-console.fxml"/>
+                                        </AnchorPane>
+                                    </content>
+                                </TitledPane>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane>
+                            <TitledPane animated="false" collapsible="false" text="Variables"
+                                        AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                        <children>
+                                            <fx:include source="variable-list.fxml" AnchorPane.bottomAnchor="0.0"
+                                                        AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                        AnchorPane.topAnchor="0.0"/>
+                                        </children>
+                                    </AnchorPane>
+                                </content>
+                            </TitledPane>
+                        </AnchorPane>
+                    </items>
+                </SplitPane>
             </items>
         </SplitPane>
     </center>
