--- a/src/main/resources/com/klab/gui/script-console.fxml
+++ b/src/main/resources/com/klab/gui/script-console.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.scene.layout.*?>
 <?import org.fxmisc.richtext.CodeArea?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity"
-            xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.klab.gui.controller.ConsoleScriptController"
-            AnchorPane.bottomAnchor="0.0"
-            AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+            AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.40"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.klab.gui.controller.ConsoleScriptController">
     <children>
-        <CodeArea fx:id="consoleOutput" layoutX="187.0" layoutY="88.0" AnchorPane.bottomAnchor="0.0"
+        <CodeArea fx:id="consoleOutput" editable="false" layoutX="187.0" layoutY="88.0" AnchorPane.bottomAnchor="0.0"
                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
     </children>
 </AnchorPane>
