--- a/src/main/resources/com/klab/gui/script-editor.fxml
+++ b/src/main/resources/com/klab/gui/script-editor.fxml
@@ -87,7 +87,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="stopButton" onAction="#stopExecution" disable="true" mnemonicParsing="false">
+                        <Button fx:id="stopButton" disable="true" mnemonicParsing="false" onAction="#stopExecution">
                             <tooltip>
                                 <Tooltip text="Stop"/>
                             </tooltip>
@@ -108,7 +108,7 @@
             <items>
                 <TabPane fx:id="scriptPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 </TabPane>
-                <SplitPane dividerPositions="0.29172714078374457, 0.7242380261248186" prefHeight="200.0"
+                <SplitPane dividerPositions="0.29243353783231085, 0.7791411042944786" prefHeight="200.0"
                            prefWidth="200.0">
                     <items>
                         <AnchorPane prefHeight="222.0" prefWidth="252.0">
@@ -141,13 +141,13 @@
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                             <children>
-                                <TitledPane animated="false" collapsible="false" text="Micro-instructions"
+                                <TitledPane animated="false" collapsible="false" text="Call stack"
                                             AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                             AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                             <children>
-                                                <ListView fx:id="microInstructionList" layoutX="-15.0" layoutY="-2.0"
+                                                <ListView fx:id="callStack" layoutX="-48.0" layoutY="-18.0"
                                                           prefHeight="200.0" prefWidth="200.0"
                                                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
@@ -162,4 +162,22 @@
             </items>
         </SplitPane>
     </center>
+    <right>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <TitledPane animated="false" collapsible="false" text="Micro-instructions" AnchorPane.bottomAnchor="0.0"
+                            AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <ListView fx:id="microInstructionList" layoutX="-15.0" layoutY="-2.0" prefHeight="200.0"
+                                          prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </TitledPane>
+            </children>
+        </AnchorPane>
+    </right>
 </BorderPane>
